# SMC_LAMMPS

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  README.txt  default_parameters.py  dna_creator.py  generate+parse.py  generator.py  input  input.lmp  model_generate+parse.py  process_displacement.py  pyproject.toml  requirements.txt  run.py  seeds.csv  smc.py  smc_creator.py  structure_creator.py  visualize.py  visualize.sh  vmd.init
.github/: dependabot.yml
.github/workflows/: docker.yml  docs.yml  publish.yml  tox.yml
10 nm kleisin/: parameters
10 nm kleisin - strong middle sites/: generate+parse.py
10nm_kleisin/: parameters.py
10nm_kleisin-strong_middle_sites/: input  parameters  parameters.py
7 nm kleisin/: parameters
7nm_kleisin/: input  parameters.py
7nm_kleisin/states/: adp_bound  apo  atp_bound_1  atp_bound_2
docs/source/: conf.py  index.rst  smc_lammps.generate.rst  smc_lammps.post_process.plotting.rst  smc_lammps.post_process.rst
docs/source/_static/: custom.css
generate/: default_parameters.py  generate+parse.py  generator.py  util.py
generate/structures/: structure_creator.py
generate/structures/dna/: dna.py  dna_creator.py
generate/structures/smc/: alternative_smc.py  alternative_smc_creator.py  smc.py  smc_creator.py
hinge/: parameters.py
lammps/: input.lmp
post-process/: average_plot.py  process_displacement.py  visualize.py
src/smc_lammps/: __init__.py  run.py
src/smc_lammps/generate/: __init__.py  default_parameters.py  generate.py  generator.py  parameters_template.py  util.py  (+1 more)
tests/: test_cli.py  test_util.py
(+27 files in other folders)
