[project]
name = "smc-lammps"
version = "0.1.0"
description = "Simulate DNA loop extrusion by SMCs using LAMMPS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
classifiers = [ "Programming Language :: Python :: 3 :: Only", "Programming Language :: Python :: 3.13" ]
dependencies = [
  "argcomplete>=3.6.2",
  "matplotlib>=3.10.1",
  "numpy>=2.2.4",
  "scipy>=1.15.2",
]
urls.Repository = "https://github.com/LucasDooms/SMC_LAMMPS.git"

[project.scripts]
smc-lammps = "smc_lammps:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
